kubernetes/infrastructure/renovate/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renovate
  namespace: renovate
  labels:
    app: renovate
spec:
  selector:
    matchLabels:
      app: renovate
  template:
    metadata:
      labels:
        app: renovate
    spec:
      containers:
        - name: renovate
          image: ghcr.io/mend/renovate-ce:7.4.0-full
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: renovate-db
              mountPath: /db/
            - name: renovate-logs
              mountPath: /logs/
            - name: renovate-gh-app-pem
              mountPath: /usr/src/app/rpi5-cluster-renovate.2024-07-05.private-key.pem
      volumes:
        - name: renovate-db
          hostPath:
            path: /mnt/nfs/AppData/renovate/db
            type: Directory
        - name: renovate-logs
          hostPath:
            path: /mnt/nfs/AppData/renovate/logs
            type: Directory
        - name: renovate-gh-app-pem
          hostPath:
            path: /mnt/nfs/AppData/renovate/key/rpi5-cluster-renovate.2024-07-05.private-key.pem
            type: File
