kubernetes/infrastructure/renovate/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renovate
  namespace: renovate
  labels:
    app.kubernetes.io/name: renovate
    app.kubernetes.io/instance: renovate
spec:
  type: ClusterIP
  ports:
    - port: 8899
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: renovate
    app.kubernetes.io/instance: renovate
